Refactoring to java 21 and added snap diagram