@@ -3,32 +3,31 @@ package hu.modeldriven.astah.core;
 import com.change_vision.jude.api.inf.AstahAPI;
 import com.change_vision.jude.api.inf.editor.SysmlModelEditor;
 import com.change_vision.jude.api.inf.exception.InvalidEditingException;
+import com.change_vision.jude.api.inf.exception.InvalidUsingException;
 import com.change_vision.jude.api.inf.model.IDiagram;
 import com.change_vision.jude.api.inf.model.INamedElement;
 import com.change_vision.jude.api.inf.model.IValueType;
 import com.change_vision.jude.api.inf.presentation.ILinkPresentation;
 import com.change_vision.jude.api.inf.presentation.INodePresentation;
 import com.change_vision.jude.api.inf.presentation.IPresentation;
-import com.change_vision.jude.api.inf.project.ModelFinder;
 import hu.modeldriven.astah.core.exception.AstahRuntimeException;
 
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class AstahRepresentation {
 
-    public IValueType findValueTypeByName(String typeName){
+    public IValueType findValueTypeByName(String typeName) {
 
         try {
-            INamedElement[] elements = AstahAPI.getAstahAPI().getProjectAccessor()
-                                        .findElements(
-                                                iNamedElement -> iNamedElement instanceof IValueType &&
-                                                        iNamedElement.getName().equals(typeName));
+            INamedElement[] elements = AstahAPI.getAstahAPI()
+                    .getProjectAccessor()
+                    .findElements(iNamedElement -> iNamedElement instanceof IValueType &&
+                            iNamedElement.getName().equals(typeName));
 
-            if (elements.length != 1){
+            if (elements.length != 1) {
                 return null;
             }
 
@@ -43,7 +42,7 @@ public class AstahRepresentation {
     public SysmlModelEditor modelEditor() throws AstahRuntimeException {
         try {
             return AstahAPI.getAstahAPI().getProjectAccessor().getModelEditorFactory().getSysmlModelEditor();
-         } catch (Exception e) {
+        } catch (Exception e) {
             throw new AstahRuntimeException(e);
         }
     }
@@ -66,7 +65,7 @@ public class AstahRepresentation {
                             .getDiagramViewManager()
                             .getSelectedPresentations())
                     .filter(e -> !(e.getModel() instanceof IDiagram))
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             throw new AstahRuntimeException(e);
         }
@@ -76,14 +75,14 @@ public class AstahRepresentation {
         return selectedPresentations().stream()
                 .filter(INodePresentation.class::isInstance)
                 .map(INodePresentation.class::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ILinkPresentation> selectedLinks() throws AstahRuntimeException {
         return selectedPresentations().stream()
                 .filter(ILinkPresentation.class::isInstance)
                 .map(ILinkPresentation.class::cast)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setBounds(INodePresentation node, Rectangle2D rectangle) {
@@ -104,4 +103,14 @@ public class AstahRepresentation {
         }
     }
 
+    public void selectCurrentDiagramElements() {
+        try{
+            AstahAPI.getAstahAPI()
+                    .getViewManager()
+                    .getDiagramViewManager()
+                    .selectAll();
+        } catch (ClassNotFoundException | InvalidUsingException e){
+            throw new AstahRuntimeException(e);
+        }
+    }
 }
